--- a/institutional/product.html
+++ b/institutional/product.html
@@ -742,6 +742,8 @@
                     The tables below summarize <em>illustrative</em> behavior of a 60/40 baseline and three implementation roles across common regimes.
                 </p>
 
+                <!-- ARCHIVED: Regime matrix toggle (hidden for compliance - may restore later) -->
+                <!--
                 <div class="regime-header-row">
                     <div class="regime-toggle-label">View</div>
                     <div class="regime-toggle">
@@ -749,6 +751,7 @@
                         <button type="button" data-regime-view="quantitative">Illustrative scenario numbers</button>
                     </div>
                 </div>
+                -->
 
                 <!-- Qualitative Matrix -->
                 <div id="regimeMatrixQualitative" class="regime-matrix">
@@ -827,7 +830,7 @@
                     </table>
                 </div>
 
-                <!-- Quantitative / Scenario Matrix -->
+                <!-- ARCHIVED: Quantitative / Scenario Matrix (hidden for compliance - may restore later) -->
                 <div id="regimeMatrixQuantitative" class="regime-matrix" style="display:none; margin-top:1.5rem;">
                     <table>
                         <thead>
@@ -1065,7 +1068,8 @@
         */
 
         document.addEventListener('DOMContentLoaded', function() {
-            // Regime matrix view toggle
+            // ARCHIVED: Regime matrix view toggle (disabled for compliance - may restore later)
+            /*
             const regimeButtons = document.querySelectorAll('[data-regime-view]');
             const qual = document.getElementById('regimeMatrixQualitative');
             const quant = document.getElementById('regimeMatrixQuantitative');
@@ -1085,6 +1089,7 @@
                     }
                 });
             });
+            */
         });
     </script>
 </body>
