--- a/retail/simulator.html
+++ b/retail/simulator.html
@@ -54,7 +54,12 @@
     <header class="header">
         <nav class="nav container">
             <div class="nav-left">
-                <a href="/" class="logo">First Principle Asset Management</a>
+                <a href="/" class="logo">
+                    <span class="logo-line-1">First Principle</span>
+                    <span class="logo-line-2">Asset Management</span>
+                    <span class="logo-line-3">powered by</span>
+                    <span class="logo-line-4">The Invictus Collective</span>
+                </a>
             </div>
             <ul class="nav-links">
                 <li><a href="/about.html">About</a></li>
