--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About & Leadership | First Principle Asset Management</title>
+    <meta name="description" content="About First Principle Asset Management. Learn about our leadership team and institutional expertise in structured products and portfolio enhancement.">
+    <title>About & Leadership | First Principle</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles.css">
@@ -339,7 +340,7 @@
         <!-- TEAM SECTION -->
         <section class="team-section-new">
             <div class="container">
-                <h2 class="section-title fade-on-scroll">Leadership</h2>
+                <h1 class="section-title fade-on-scroll">Leadership</h1>
                 <div class="team-grid-new">
                     <div class="team-panel-clickable fade-on-scroll" data-bio="habitz">
                         <div class="avatar-new">
@@ -382,7 +383,7 @@
                             <div class="origin-step-number">1</div>
                             <div class="origin-step-content">
                                 <h3>Institutional Foundation</h3>
-                                <p>First Principle was created by The Invictus Collective, a multi-family office serving ultra-high-net-worth families and institutional clients. For years, Christian Habitz and Rob Bower have used structured-note portfolios to engineer downside-aware income and custom exposures for a small number of private clients.</p>
+                                <p>First Principle was created by The Invictus Collective, a multi-family office serving ultra-high-net-worth families and institutional clients. For years, Christian Habitz and Rob Bower have used structured-note portfolios to engineer downside-aware income and custom exposures for a small number of private clients. Explore our <a href="/institutional/product.html" style="color: #C8A678; text-decoration: underline;">structured note strategy</a> and learn how we apply these frameworks to institutional portfolios.</p>
                             </div>
                         </div>
                         <div class="origin-step">
@@ -396,7 +397,7 @@
                             <div class="origin-step-number">3</div>
                             <div class="origin-step-content">
                                 <h3>Scalable Architecture</h3>
-                                <p>First Principle exists to bring that same architecture to the advisory market. Instead of bespoke tickets, we design scalable SMAs and AMC portfolios that give advisors and their clients access to the same research, counterparties, and risk framework previously reserved for UHNW families—without channel conflict and with clear integration into existing 60/40 and model portfolios.</p>
+                                <p>First Principle exists to bring that same architecture to the advisory market. Instead of bespoke tickets, we design scalable SMAs and AMC portfolios that give advisors and their clients access to the same research, counterparties, and risk framework previously reserved for UHNW families—without channel conflict and with clear integration into existing 60/40 and model portfolios. See our <a href="/institutional/simulator.html" style="color: #C8A678; text-decoration: underline;">portfolio simulator</a> to explore how these portfolios can enhance your allocations, or <a href="/contact.html" style="color: #C8A678; text-decoration: underline;">contact us</a> to learn more.</p>
                             </div>
                         </div>
                     </div>
