--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | First Principle Asset Management</title>
+    <meta name="description" content="Contact First Principle Asset Management. Partner with us for institutional-grade structured product solutions and portfolio enhancement strategies.">
+    <title>Contact | First Principle</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles.css">
@@ -49,8 +50,8 @@
             <div class="container">
                 <div class="contact-content-new">
                     <div class="contact-text-new fade-on-scroll">
-                        <h2 class="contact-title">Partner With First Principle</h2>
-                        <p class="contact-subtitle">We collaborate with advisors who value institutional-grade structured solutions. Share a few details and our team will follow up.</p>
+                        <h1 class="contact-title">Partner With First Principle</h1>
+                        <p class="contact-subtitle">We collaborate with advisors who value institutional-grade structured solutions. Share a few details and our team will follow up. Learn more about our <a href="/institutional/product.html" style="color: #C8A678; text-decoration: underline;">structured note strategy</a> and explore our <a href="/resources.html" style="color: #C8A678; text-decoration: underline;">implementation resources</a>.</p>
                     </div>
                     <div class="contact-form-panel fade-on-scroll delay-1">
                         <form class="contact-form-new" id="contactForm">
@@ -256,7 +257,7 @@
                 } catch (error) {
                     console.error('Form submission error:', error);
                     showMessage(
-                        error.message || 'There was an error sending your message. Please try again later or contact us directly at engage@theinvictuscollective.com.',
+                        error.message || 'There was an error sending your message. Please try again later or contact us directly at team@theinvictuscollective.com.',
                         'error'
                     );
                     
