--- a/institutional/index.html
+++ b/institutional/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Principle Asset Management | Institutional Structured Products</title>
+    <meta name="description" content="Institutional structured products designed to convert equity volatility into stable income. Portfolio enhancement for a new market regime.">
+    <title>Institutional Structured Products | First Principle</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="../styles.css">
@@ -304,7 +305,7 @@
                 <p class="section-subheader">
                     Capital market assumptions have shifted materially. Forward equity returns are lower, volatility is structurally
                     higher, and traditional diversification is less reliable. We believe that the portfolio construction playbook that worked in the
-                    Quantitative Easing era requires recalibration for today&#8217;s and tomorrow&#8217;s regime.
+                    Quantitative Easing era requires recalibration for today&#8217;s and tomorrow&#8217;s regime. Explore our <a href="/about.html" style="color: #C8A678; text-decoration: underline;">institutional expertise</a> and learn how we apply systematic frameworks to portfolio enhancement.
                 </p>
 
                 <div class="regime-timeline">
@@ -407,7 +408,7 @@
                 <p class="section-subheader">
                     We construct diversified, rules-based portfolios of structured notes that are designed to harvest index option premium across major indices
                     (SPX, NDX, RUT, SX5E). The objective is to convert volatility and skew into stable income and convex payoff profiles while
-                    keeping the overall portfolio aligned with existing policy benchmarks and risk budgets.
+                    keeping the overall portfolio aligned with existing policy benchmarks and risk budgets. Learn more about our <a href="/institutional/product.html" style="color: #C8A678; text-decoration: underline;">structured note strategy</a> and implementation framework.
                 </p>
                 <div class="pillars-grid">
                     <div class="pillar-card">
