--- a/institutional/product.html
+++ b/institutional/product.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strategy | First Principle Asset Management</title>
+    <meta name="description" content="Structured note strategy for institutional portfolios. Learn how structured-note sleeves enhance policy portfolios with systematic frameworks.">
+    <title>Structured Note Strategy | First Principle</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="../styles.css">
@@ -612,7 +613,7 @@
                 <h2 class="section-header">Implementation Roles Within a Policy Portfolio</h2>
                 <p class="section-subheader">
                     Most allocators do not want "a structured product book." They want a predictable sleeve that improves the behavior of an existing 60/40 or 
-                    multi-asset allocation. We typically implement across three roles, funded from different parts of the portfolio.
+                    multi-asset allocation. We typically implement across three roles, funded from different parts of the portfolio. Explore our <a href="/institutional/simulator.html" style="color: #C8A678; text-decoration: underline;">portfolio simulator</a> to see how these implementation roles perform across market regimes.
                 </p>
 
                 <div class="implementation-strip">
@@ -995,7 +996,7 @@
                 <h2 class="section-header">Implementation for Institutional Allocators</h2>
                 <p class="section-subheader">
                     Our sleeves are delivered through SMAs and AMC structures, with flexibility to integrate into existing operating platforms 
-                    without creating operational drag for the investment office.
+                    without creating operational drag for the investment office. For more information on our approach and team, see our <a href="/about.html" style="color: #C8A678; text-decoration: underline;">about page</a>, or <a href="/contact.html" style="color: #C8A678; text-decoration: underline;">contact us</a> to discuss implementation.
                 </p>
                 <div class="pillars-grid">
                     <div class="pillar-card">
