--- a/institutional/simulator.html
+++ b/institutional/simulator.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Simulator | First Principle Asset Management</title>
+    <meta name="description" content="Portfolio simulator for structured products. Test hypothetical outcomes with structured note portfolios across market regimes and implementation roles.">
+    <title>Portfolio Simulator | First Principle</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="../styles.css">
@@ -257,7 +258,7 @@
                 <div class="simulator-chart-container">
                     <div class="simulator-header-bar">
                         <div style="flex: 1; min-width: 0;">
-                            <h2 class="simulator-header-title">Hypothetical Portfolio Outcomes with Structured Products</h2>
+                            <h1 class="simulator-header-title">Hypothetical Portfolio Outcomes with Structured Products</h1>
                             <div id="implementationLabel" class="simulator-implementation-label"></div>
                             <p style="font-size: 0.85rem; color: #A0AEC0; margin-top: 0.5rem; font-style: italic;">
                                 <strong>Hypothetical Performance Disclosure:</strong> All outcomes shown are hypothetical and for illustrative purposes only. 
@@ -266,7 +267,7 @@
                                 The simulator assumes constant expected returns and volatility, which do not account for changing market regimes, correlation shifts, 
                                 or extreme market events. Structured products are subject to issuer credit risk, barrier breach risk, early redemption risk, 
                                 liquidity risk, and market risk. Past performance does not guarantee future results. Actual results may vary significantly from 
-                                these hypothetical projections.
+                                these hypothetical projections. Learn more about our <a href="/institutional/product.html" style="color: #C8A678; text-decoration: underline;">structured note strategy</a> and <a href="/resources.html" style="color: #C8A678; text-decoration: underline;">implementation resources</a>.
                             </p>
                         </div>
                         <div id="simulatorModeContainer" style="margin-right: 1.5rem;">
