--- a/resources.html
+++ b/resources.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resources | First Principle Asset Management</title>
+    <meta name="description" content="Resources for advisors on structured products. Download whitepapers and implementation guides for institutional structured note strategies.">
+    <title>Advisor Resources | First Principle</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles.css">
@@ -47,12 +48,12 @@
         <!-- RESOURCES SECTION -->
         <section class="resources-section-new">
             <div class="container">
-                <h2 class="section-title fade-on-scroll">Resources for Advisors</h2>
-                <p class="resources-subtitle fade-on-scroll delay-1">Analytical frameworks and implementation guidance for structured SMA solutions. Our resources aim to provide the technical depth and institutional perspective required to understand and deploy structured products within an advisory practice.</p>
+                <h1 class="section-title fade-on-scroll">Resources for Advisors</h1>
+                <p class="resources-subtitle fade-on-scroll delay-1">Analytical frameworks and implementation guidance for structured SMA solutions. Our resources aim to provide the technical depth and institutional perspective required to understand and deploy structured products within an advisory practice. Learn more about our <a href="/institutional/product.html" style="color: #C8A678; text-decoration: underline;">structured note strategy</a> and explore our <a href="/about.html" style="color: #C8A678; text-decoration: underline;">institutional expertise</a>.</p>
                 <div class="whitepapers-grid">
                     <div class="whitepaper-card fade-on-scroll">
                         <h3 class="whitepaper-title">Structured Products 101</h3>
-                        <p class="whitepaper-description">A sophisticated introduction to structured products, covering fundamental concepts, building blocks, and institutional implementation frameworks. We believe this is essential reading for advisors evaluating structured solutions.</p>
+                        <p class="whitepaper-description">A sophisticated introduction to structured products, covering fundamental concepts, building blocks, and institutional implementation frameworks. We believe this is essential reading for advisors evaluating structured solutions. For hands-on exploration, try our <a href="/institutional/simulator.html" style="color: #C8A678; text-decoration: underline;">portfolio simulator</a>.</p>
                         <a href="#" class="whitepaper-link">Download PDF</a>
                     </div>
                     <div class="whitepaper-card fade-on-scroll delay-1">
