Powered by Added

--- a/institutional/index.html
+++ b/institutional/index.html
@@ -285,7 +285,7 @@
                             for a New Market Regime
                         </h1>
                         <p class="hero-subheader-new" style="font-size: 1.2rem; max-width: 800px; margin: 0 auto 2.5rem;">
-                            First Principle designs structured-note portfolios that convert equity volatility into systematic, stable income and asymmetric payoff profiles. We believe our approach is suited for today&#8217;s volatility and correlation regime, and is engineered to integrate into existing equity and credit allocations&#8212;not replace them.
+                            First Principle, powered by The Invictus Collective, designs structured-note portfolios that convert equity volatility into systematic, stable income and asymmetric payoff profiles. We believe our approach is suited for today&#8217;s volatility and correlation regime, and is engineered to integrate into existing equity and credit allocations&#8212;not replace them.
                         </p>
                         <div class="hero-buttons-new">
                             <a href="/institutional/product.html" class="btn btn-primary">Explore the Strategy</a>
