Logo to Powered by

--- a/about.html
+++ b/about.html
@@ -309,6 +309,10 @@
                 <a href="/" class="logo">
                     <span class="logo-line-1">First Principle</span>
                     <span class="logo-line-2">Asset Management</span>
+                    <div class="logo-line-separator">
+                        <span class="logo-line-3">powered by</span>
+                    </div>
+                    <span class="logo-line-4">The Invictus Collective</span>
                 </a>
             </div>
             <ul class="nav-links">
