Updated Portfolio Simulator and Flavicon

--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/jpeg" href="Logo.jpg">
     <meta name="description" content="About First Principle Asset Management. Learn about our leadership team and institutional expertise in structured products and portfolio enhancement.">
     <title>About & Leadership | First Principle</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
