--- a/resources.html
+++ b/resources.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/jpeg" href="Logo.jpg">
     <meta name="description" content="Resources for advisors on structured products. Download whitepapers and implementation guides for institutional structured note strategies.">
     <title>Advisor Resources | First Principle</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
