--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/jpeg" href="Logo.jpg">
     <meta name="description" content="Contact First Principle Asset Management. Partner with us for institutional-grade structured product solutions and portfolio enhancement strategies.">
     <title>Contact | First Principle</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
