--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/jpeg" href="Logo.jpg">
     <meta http-equiv="refresh" content="0; url=institutional/index.html">
     <title>First Principle Asset Management</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
