--- a/institutional/index.html
+++ b/institutional/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/jpeg" href="../Logo.jpg">
     <meta name="description" content="Institutional structured products designed to convert equity volatility into stable income. Portfolio enhancement for a new market regime.">
     <title>Institutional Structured Products | First Principle</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
