--- a/institutional/product.html
+++ b/institutional/product.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/jpeg" href="../Logo.jpg">
     <meta name="description" content="Structured note strategy for institutional portfolios. Learn how structured-note sleeves enhance policy portfolios with systematic frameworks.">
     <title>Structured Note Strategy | First Principle</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
