--- a/retail/simulator.html
+++ b/retail/simulator.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/jpeg" href="../Logo.jpg">
     <title>Portfolio Simulator | First Principle Asset Management</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -144,7 +145,7 @@
                             <span class="slider-value-minimal" id="structuredEquityValue">20%</span>
                         </div>
                         <input type="range" id="structuredEquity" min="0" max="60" value="20" step="5" class="slider-premium">
-                        <div class="slider-note-minimal">Expected return: 10%</div>
+                        <div class="slider-note-minimal">Expected return: 12%</div>
                     </div>
 
                     <div class="control-bar-item">
@@ -153,13 +154,13 @@
                             <span class="slider-value-minimal" id="structuredFixedIncomeValue">10%</span>
                         </div>
                         <input type="range" id="structuredFixedIncome" min="0" max="40" value="10" step="5" class="slider-premium">
-                        <div class="slider-note-minimal">Expected return: 7%</div>
+                        <div class="slider-note-minimal">Expected return: 10%</div>
                     </div>
                 </div>
 
                 <!-- Assumptions Notation -->
                 <div class="assumptions-notation">
-                    Assumptions: Base portfolio is 60% broad-based equities at 7.0% expected annual return and 40% fixed income blended from 2/3 investment grade at 4.0% and 1/3 high yield at 5.75% (≈4.58% blended). Structured equity sleeve represents a diversified basket of equity-linked notes with 10.0% expected return. Structured fixed income sleeve represents a diversified basket of income-focused notes with 7.0% expected return. All figures are hypothetical and for illustrative purposes only.
+                    Assumptions: Base portfolio is 60% broad-based equities at 7.0% expected annual return and 40% fixed income blended from 2/3 investment grade at 4.0% and 1/3 high yield at 5.75% (≈4.58% blended). Structured equity sleeve represents a diversified basket of equity-linked notes with 12.0% expected return. Structured fixed income sleeve represents a diversified basket of income-focused notes with 10.0% expected return. All figures are hypothetical and for illustrative purposes only.
                 </div>
 
                 <!-- Metrics Panels -->
@@ -227,9 +228,9 @@
 
         const RETURNS = {
             traditionalEquity: 0.07,      // 7.0% expected annual return
-            structuredEquity: 0.10,       // structured equity sleeve
+            structuredEquity: 0.12,       // structured equity sleeve
             traditionalFixedIncome: 0.0458, // ~4.58% blended IG/HY
-            structuredFixedIncome: 0.07   // structured income sleeve
+            structuredFixedIncome: 0.10   // structured income sleeve
         };
 
         const VOLATILITY = {
